# anycastd

./: .copier-answers.yml  .editorconfig  Dockerfile  LICENSE  README.md  justfile  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: CI.yml  build.yml  links.yml  publish.yml  test.yml  verify.yml
src/anycastd/: __init__.py  __main__.py  _base.py  _executor.py  _main.py  core.py
src/anycastd/_cli/: __init__.py  main.py  output.py
src/anycastd/_configuration/: __init__.py  conversion.py  exceptions.py  healthcheck.py  main.py  prefix.py  service.py  sub.py
src/anycastd/_configuration/healthcheck/: __init__.py  _cabourotte.py  _main.py
src/anycastd/_configuration/prefix/: __init__.py  _frr.py  _main.py
src/anycastd/configuration/: _cabourotte.py  _frr.py  exceptions.py  main.py
src/anycastd/core/: __init__.py  _exit.py  _run.py  _service.py
src/anycastd/healthcheck/: __init__.py  _common.py  _main.py  base.py
src/anycastd/healthcheck/_cabourotte/: exceptions.py  main.py  result.py
src/anycastd/prefix/: __init__.py  _main.py  base.py  core.py  frrouting.py
src/anycastd/prefix/_frrouting/: exceptions.py  main.py
src/anycastd/prefix/frrouting/: __init__.py  _main.py  exceptions.py
tests/: conftest.py  docker-compose.yml  dummy.py  test_entrypoint_version_check.py  test_executor.py  test_main.py  test_run.py  test_service.py
tests/cli/: conftest.py  test_main.py
tests/configuration/: conftest.py  test_cabourotte.py  test_conversion.py  test_exceptions.py  test_frr.py  test_get_config_type_by_name.py  test_main.py  test_main_configuration.py  test_reading_configuration_file.py  test_sub_configuration.py
tests/configuration/healthcheck/: test_cabourotte.py
tests/configuration/prefix/: test_frr.py
tests/files/frr/: daemons  frr.conf
tests/healthcheck/: test_base.py  test_checkers.py
tests/healthcheck/cabourotte/: test_main.py  test_result.py
tests/prefix/: test_base.py
tests/prefix/frrouting/: conftest.py  test_basic_functionality.py  test_frr_behavior.py  test_main.py
tests/prefix/frrouting/files/: vtysh.conf
