[project]
name = "anycastd"
description = "A daemon to manage anycasted services based on status checks."
authors = [
    {name = "Marvin Vogt", email = "m@rvinvogt.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
version = "0.1.12"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Clustering",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: System Administrators",
    "Typing :: Typed",
]
keywords = [
    "anycast",
    "bgp",
    "dns",
    "frrouting",
    "monitoring",
    "networking",
    "infrastructure",
    "routing",
    "healthcheck",
]

requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.2, < 2.9",
    "httpx>=0.25.0",
    "typer[all]>=0.12.4",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "orjson>=3.9.13",
]

[project.urls]
Repository = "https://github.com/gecio/anycastd"
Issues = "https://github.com/gecio/anycastd/issues"

[project.scripts]
anycastd = "anycastd.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-pretty",
    "pytest-github-actions-annotate-failures",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.23.5",
    "pytest-random-order>=1.1.1",
    "respx>=0.20.2",
    "pyfakefs>=5.3.1",
    "tomli-w>=1.0.0",
    "hypothesis>=6.99.5",
    "testcontainers>=4.4.1",
    "stamina>=24.2.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[tool.black]
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "S",
    "W",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "C90",
    "FBT",
    "C4",
    "DTZ",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "TID",
    "ERA",
    "PLE",
    "RUF",
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "S603"]

mccabe.max-complexity = 10
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert
    "FBT001", # Positional boolean function argument
    "D200",   #
    "D212",   # Allow longer docstrings without summary.
    "D205",   #
]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--random-order"
]
xfail_strict = true
markers = [
    "integration:integration tests",
    "e2e:e2e tests",
    "frrouting_daemon_required:tests that run against a real FRRouting instance",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover"
]
